Imps: 1. trivial improvements